syntax = "proto3";

option java_package = "com.android.chatapp";
option java_multiple_files = true;

message TokenPreferences {
  uint64 id = 1;
  string access_token = 2;
  string refresh_token = 3;
}